@@ -75,12 +75,11 @@
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.10.1</version>
 					<configuration>
-						<release>18</release>
+						<release>19</release>
 						<encoding>UTF-8</encoding>
 						<showWarnings>true</showWarnings>
 						<compilerArgs>
-							<arg>--add-modules</arg>
-							<arg>jdk.incubator.foreign</arg>
+							<compilerArg>--enable-preview</compilerArg>
 						</compilerArgs>
 					</configuration>
 				</plugin>
@@ -153,6 +152,10 @@
 						<goals>
 							<goal>jar</goal>
 						</goals>
+						<configuration>
+							<release>19</release>
+							<additionalOptions>--enable-preview</additionalOptions>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
@@ -175,7 +178,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
-					<argLine>${surefire.jacoco.args}</argLine>
+					<argLine>${surefire.jacoco.args} --enable-preview</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
